# auradeck

./: LICENSE  README.md  package-lock.json  package.json  to.do
example/: example.adsl
example/extracted/: f4np8w2q.html  j6t3vc8y.html  m1bg5d7h.html  manifest.json  q9z0le4s.html  r7x2ka9m.html  w3e6yr1k.html
linux/: auradeck-adsl.xml  celray-auradeck.desktop  install-mime.sh
src/: editor.css  editor.js  index.html  main.js  presenter.html  style.css  templates.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
