[package]
name = "auradeck"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
rand = "0.8"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
